Fix for audio icon being misaligned

--- a/less/block-reveal.less
+++ b/less/block-reveal.less
@@ -1,7 +1,3 @@
-.is-blockreveal-hidden {
-	display: none;
-}
-
 .blockreveal {
 
 	&.top {
@@ -18,6 +14,7 @@
 	&.bottom {
 		position: relative;
 		text-align: center;
+		margin-top: @btn-margin;
 
 		.icon {
 			position: relative;
